--- a/client/css/base/base.less
+++ b/client/css/base/base.less
@@ -3,6 +3,7 @@
 html { font-size: 10px; }
 
 body {
+  position: relative;
   background-image: url( "img/default.jpg" );
   background-position: center top;
   background-size: cover;
@@ -28,5 +29,9 @@ h4 {
 
 p {
   font-size: 2rem;
-  font-family: "Raleway";
+  font-family: "Lato";
+}
+
+input {
+  font-family: "Lato";
 }
