--- a/client/css/templates/footer.less
+++ b/client/css/templates/footer.less
@@ -1,7 +1,11 @@
-.bottom-logo {
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  width: 100px;
-  height: 80px;
+.footer {
+  position: absolute;
+  right: 30px;
+  bottom: 10px;
+  	.bottom-logo {
+	  	img {
+	  	width: 155px;
+	  	height: 100px;
+	  	}
+	}
 }
