--- a/client/css/templates/remote-mixer.less
+++ b/client/css/templates/remote-mixer.less
@@ -20,7 +20,6 @@
 
 .mixer-wrap {
   padding: 50px 40px;
-  width: 100%;
   border: @border-gold;
   text-align: center;
   background: white;
@@ -34,7 +33,9 @@
     float: left;
   }
 
-  .last-mixer-quarter { padding-right: 0; }
+  .last-mixer-quarter { 
+    padding-right: 0; 
+    }
 }
 
 .winemakers-tip {
