--- a/client/css/templates/template-editor.less
+++ b/client/css/templates/template-editor.less
@@ -45,6 +45,12 @@
   }
 }
 
+.background-editor p::after, .text-editor p::after {
+  content: url('/img/arrow-black-side.png');
+  float: right;
+  margin-right: 7px;
+}
+
 .text-editor,
 .new-label,
 .save-label {
