--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,5 +1,7 @@
 <template name="Footer">
   <footer class="footer">
-    <h3 class="bottom-logo">Boisset Collection</h3>
+    <div class="bottom-logo">
+    	<img src="/img/BoissetCollectionLogo.png" alt="Boisset Collection Logo" />
+    </div>
   </footer>
 </template>
