--- a/client/templates/labelmaker-editor.html
+++ b/client/templates/labelmaker-editor.html
@@ -11,10 +11,10 @@
     <div class="template-wrap">
     	<div class="template-editor">
     		<div class="background-editor">
-    			<p>Background Editor<span class="arrow">&#62;</span></p>
+    			<p>Background Editor</p>
     		</div>
     		<div class="text-editor">
-    			<p>Text Editor<span class="arrow">&#62;</span></p>
+    			<p>Text Editor </p>
     		</div>
     		<div class="new-label">
     			<p>New Label <span class="plus">&#43;</span></p>
@@ -40,7 +40,7 @@
     		</div>
 
     		<div class="button-wrap">
-    			<button>Save &amp; Next<span class="arrow">&#10095;</span></button>
+    			<button>Save &amp; Next</button>
     		</div>
     	</div>
     </div>
