--- a/client/templates/labelmaker-upload.html
+++ b/client/templates/labelmaker-upload.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="button-wrap">
-          <button>Save &amp; Next<span class="arrow">&#10095;</span></button>
+          <button>Save &amp; Next</button>
         </div>
       </div>
     </div>
