--- a/client/templates/legal.html
+++ b/client/templates/legal.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="button-wrap">
-      <button>Accept &amp; Continue <span class="arrow">&#10095;</span></button>
+      <button>Accept &amp; Continue</button>
     </div>
 
   </div>
