--- a/client/templates/onsite-mixer.html
+++ b/client/templates/onsite-mixer.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="button-wrap">
-      <button>Next* <span class="arrow">&#10095;</span></button>
+      <button>Next*</button>
     </div>
   </div>
 </template>
