--- a/client/templates/onsite-submit.html
+++ b/client/templates/onsite-submit.html
@@ -7,7 +7,7 @@
     <p>Birthday Label 2:</p>
     <img src="http://placehold.it/250x200">
     <div class="button-wrap">
-      <button>Submit<span class="arrow">&#10095;</span></button>
+      <button>Submit</button>
     </div>
   </div>
 </template>
