--- a/client/templates/remotemixer-submit.html
+++ b/client/templates/remotemixer-submit.html
@@ -18,7 +18,7 @@
       <input placeholder="Number of Cases">
     </div>
     <div class="button-wrap">
-      <button>Add to Cart <span class="arrow">&#10095;</span></button>
+      <button>Add to Cart </button>
     </div>
   </div>
 </template>
