--- a/client/templates/remotemixer.html
+++ b/client/templates/remotemixer.html
@@ -50,7 +50,7 @@
       <p>Winemaker's Tip</p>
 
       <div class="button-wrap">
-        <button>Select<span class="arrow">&#10095;</span></button>
+        <button>Select</button>
       </div>
     </div>
 
