--- a/client/templates/sign-up.html
+++ b/client/templates/sign-up.html
@@ -1,6 +1,9 @@
-<template name="Auth_Register">
+<template name="SignUp">
   <div class="container-narrow">
-    <h1>Sign Up for<br/>Winemaker for a Day</h1>
+    <h1>
+      Sign Up For <br/>
+      Winemaker for a Day
+    </h1>
 
     <div class="form-wrap form-signup">
       <input placeholder="First Name">
@@ -11,7 +14,7 @@
     </div>
 
     <div class="button-wrap">
-      <button>Confirm Your Email<span class="arrow">&#10095;</span></button>
+      <button>Confirm Your Email</button>
     </div>
 
   </div>
