--- a/client/templates/video.html
+++ b/client/templates/video.html
@@ -4,8 +4,8 @@
     <img src="http://placehold.it/590x320">
     <div class="form-wrap">
       <div class="button-wrap video-buttons">
-        <button>At Location* <span class="arrow">&#10095;</span></button>
-        <button>Online <span class="arrow">&#10095;</span></button>
+        <button>At Location*</button>
+        <button>Online</button>
       </div>
       <p>
         *If you select the "At Location" option, make sure you have your confirmation number ready. Your confirmation number is the number you recieved by signing up through CellarPass or Boisset directly
