--- a/client/css/layout/containers.less
+++ b/client/css/layout/containers.less
@@ -6,18 +6,20 @@ body {
 
 // Main Container with modifier widths
 .container {
-  width: 1024px;
+  max-width: 1024px;
   margin: 0 auto;
   margin-top: 100px;
+  padding: 0 30px 120px;
+  position: relative;
 
   &-medium {
     &:extend( .container );
-    width: 590px;
+    max-width: 590px;
   }
 
   &-narrow {
     &:extend( .container );
-    width: 420px;
+    max-width: 420px;
   }
 
   & ul  { list-style: none; }
@@ -34,6 +36,9 @@ body {
 }
 
 //One Third Wraps for Full Width
+.label-wrap {
+  width: 100%;
+}
 .one-third-wrap {
   width: 27%;
   padding: 0 30px;
