--- a/client/templates/remotemixer-raymond.html
+++ b/client/templates/remotemixer-raymond.html
@@ -49,7 +49,7 @@
     <div class="winemakers-tip">
       <p> Winemaker's Tip</p>
       <div class="button-wrap">
-        <button>Select<span class="arrow">&#10095;</span></button>
+        <button>Select</button>
       </div>
     </div>
 
