--- a/client/templates/shipping.html
+++ b/client/templates/shipping.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="button-wrap">
-      <button>Next <span class="arrow">&#10095;</span></button>
+      <button>Next </button>
     </div>
   </div>
 </template>
